[package]
name = "nyth"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.31.3", features = ["fs", "mount", "user"] }
rustix = { version = "1", features = ["mount", "fs", "process"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[dev-dependencies]
libc = "0.2.186"
